@@ -33,6 +33,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <SDL_audio.h>
 #include "Mixer.h"
 #include "Midi.h"
+#include "exceptions.h"
 #include "utils.h"
 
 //---- Audio -----------------------------------------------------------
