@@ -28,6 +28,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #include <cstdio>
 #include <iostream>
+#include "exceptions.h"
 #include "utils.h"
 
 using std::string;
@@ -46,34 +47,29 @@ Flex::Flex(const string &n) : U7file(n)
 
 void	Flex::IndexFlexFile(void)
 {
-	Flex	&ret=*this;
 	FILE	*fp;
-	const 	char *name=ret.filename.c_str();
-	fp=U7open(name,"rb");
+	fp=U7open(filename.c_str(),"rb");
 	if(!fp)
-		{
-		throw 0;
-		return;
-		}
-	fread(ret.title,sizeof(ret.title),1,fp);
-	ret.magic1 = Read4(fp);
-	ret.count = Read4(fp);
-	ret.magic2 = Read4(fp);
+		throw file_not_found_error(filename);
+	fread(title,sizeof(title),1,fp);
+	magic1 = Read4(fp);
+	count = Read4(fp);
+	magic2 = Read4(fp);
 	if(magic1!=0xffff1a00UL)
 		{
 		cerr << "Magic number is not a flex file" << endl;
-		throw 0;	// Not a flex file
+		throw wrong_file_type_error();	// Not a flex file
 		}
 	for(int i=0;i<9;i++)
-		ret.padding[i] = Read4(fp);
+		padding[i] = Read4(fp);
 #if DEBUGFLEX
-	cout << "Title: " << ret.title << endl;
-	cout << "Count: " << ret.count << endl;
+	cout << "Title: " << title << endl;
+	cout << "Count: " << count << endl;
 #endif
 
 	// We should already be there.
 	fseek(fp,128,SEEK_SET);
-	for(unsigned int i=0;i<ret.count;i++)
+	for(unsigned int i=0;i<count;i++)
 		{
 		Flex::Reference f;
 		f.offset = Read4(fp);
@@ -81,25 +77,25 @@ void	Flex::IndexFlexFile(void)
 #if DEBUGFLEX
 		cout << "Item " << i << ": " << f.size << " bytes @ " << f.offset << endl;
 #endif
-		ret.object_list.push_back(f);
+		object_list.push_back(f);
 		}
 	fclose(fp);
 }
 
-int     Flex::retrieve(int objnum,char **buf,size_t *len)
+void     Flex::retrieve(int objnum,char **buf,size_t *len)
 {
 	*buf=0;
 	*len=0;
 	if((unsigned)objnum>=object_list.size())
 		{
 		cerr << "objnum too large in read_object()" << endl;
-		return 0;
+		throw exult_exception("objnum too large in read_object()");
 		}
 	FILE	*fp=U7open(filename.c_str(),"rb");
 	if(!fp)
 		{
 		cerr << "File open failed in read_object: " << filename << endl;
-		return 0;
+		throw exult_exception("File open failed in read_object: "+filename);
 		}
 	fseek(fp,object_list[objnum].offset,SEEK_SET);
 	size_t length=object_list[objnum].size;
@@ -108,14 +104,7 @@ int     Flex::retrieve(int objnum,char **buf,size_t *len)
 	fclose(fp);
 	*buf=ret;
 	*len=length;
-	return 1;
 }
-
-int     Flex::retrieve(int objnum,const char *)
-{ return 0; }
-
-
-Flex::~Flex() {}
 
 #if 0
 char	*Flex::read_object(int objnum,uint32 &length)
