@@ -26,6 +26,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef INCL_GUMPS
 #define INCL_GUMPS
 
+#include "exceptions.h"
 #include "rect.h"
 #include "shapeid.h"
 #include "utils.h"
